# qa-gen

./: .gitignore  CMakeLists.txt  LICENSE  QAGen.exe.manifest  img2dcm.c  mhd2dcm.c  send.c
src/: CMakeLists.txt  main.c  qagen-app.c  qagen-app.h  qagen-console.c  qagen-console.h  qagen-copy.c  qagen-copy.h  qagen-debug.c  qagen-debug.h  qagen-defs.h  qagen-dicom.cxx  qagen-dicom.h  qagen-error.c  qagen-error.h  qagen-excel.c  qagen-excel.h  qagen-filedlg.c  qagen-filedlg.h  qagen-files.c  qagen-files.h  qagen-img2dcm.cxx  qagen-img2dcm.h  qagen-json.c  qagen-json.h  qagen-log.c  qagen-log.h  qagen-memory.c  qagen-memory.h  qagen-metaio.cxx  qagen-metaio.h  qagen-path.c  qagen-path.h  qagen-patient.c  qagen-patient.h  qagen-progdlg.c  qagen-progdlg.h  qagen-rpwnd.c  qagen-rpwnd.h  qagen-shell.c  (+3 more)
src/res/: skccclogo.h
